Fixed header height bug on mobile. Fixed skills height cropping text when multiple lines.

--- a/assets/site.css
+++ b/assets/site.css
@@ -340,21 +340,21 @@ hr {
 }
 
 #experiences .experience .experience-details .seperator {
-  color: #BCBCBC;
+  color: #bcbcbc;
 }
 
 #abilities ul > li {
-  transition: padding .3s ease, background .3s ease, height .3s ease;
+  transition: padding .3s ease, background .3s ease, max-height .3s ease;
   overflow: hidden;
-  height: 1.8rem;
+  max-height: 5rem; /* 3 rows */
 }
 
 #abilities ul > li.hidden {
-  height: 0;
+  max-height: 0;
 }
 
 #abilities ul > li:hover {
-  background: #F2F2F2;
+  background: #f2f2f2;
   padding-left: 20px;
   padding-right: 20px;
 }
